<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.pippsford</groupId>
  <artifactId>SecurePRNG</artifactId>
  <version>0.14</version>
  <name>SecurePRNG</name>
  <description>Implementation of NIST compliant secure random number generators and related tools.</description>
  <url>https://github.com/simon-greatrix/sec-prng</url>

  <licenses>
    <license>
      <name>MIT</name>
      <url>https://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Simon Greatrix</name>
      <email>simon@pippsford.com</email>
      <organization>N/A</organization>
      <organizationUrl>https://github.com/simon-greatrix</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/simon-greatrix/sec-prng.git</connection>
    <developerConnection>scm:git:https://github.com/simon-greatrix/sec-prng.git</developerConnection>
    <url>https://github.com/simon-greatrix/sec-prng.git</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <build>
    <defaultGoal>clean javadoc:jar source:jar deploy</defaultGoal>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.6</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.9</version>
        <extensions>true</extensions>
        <configuration>
           <serverId>ossrh</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>      

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <outputDirectory>${project.basedir}/docs</outputDirectory>
          <reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory>
          <aggregate>true</aggregate>
          <show>package</show>
          <nohelp>true</nohelp>
          <header>Secure-PRNG, ${project.version}</header>
          <footer>Secure-PRNG, ${project.version}</footer>
          <doctitle>Secure-PRNG, ${project.version}</doctitle>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-api</artifactId>
  		<scope>compile</scope>
  		<version>1.7.25</version>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-jdk14</artifactId>
  		<version>1.7.25</version>
  		<scope>provided</scope>
        <optional>true</optional>
  	</dependency>
  </dependencies>

  <packaging>pom</packaging>

  <modules>
  	<module>core</module>
  	<module>image</module>
  	<module>configurator</module>
  	<module>utilities</module>
  </modules>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

</project>
